Fix bug where larger sign in button was the wrong color

--- a/app/assets/stylesheets/caseadilla/login.css.scss
+++ b/app/assets/stylesheets/caseadilla/login.css.scss
@@ -37,7 +37,7 @@ body {
 	text-align: center;
 }
 
-form#new_user input.btn-large {
+form#new_user input.btn-block {
     background-color: rgb(220, 120, 40);
     border-color: rgb(175, 92, 32);
 }
